--- a/template/src/utilities/i18n/en.json
+++ b/template/src/utilities/i18n/en.json
@@ -38,5 +38,10 @@
   "Color": "Color",
   "Variant": "Variant",
   "State": "State",
-  "Icons": "Icons"
+  "Icons": "Icons",
+  "Making Requests": "Making Requests",
+  "As part of this page's load we make a request to a mockup endpoint.": "As part of this page's load we make a request to a mockup endpoint.",
+  "In order to make sure the response data fulfill the expectations we have about its structure and typing we use a response validator.": "In order to make sure the response data fulfill the expectations we have about its structure and typing we use a response validator.",
+  "This is how a request looks like:": "This is how a request looks like:",
+  "<strong>User</strong> entity:": "<strong>User</strong> entity:"
 }
