--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -43,5 +43,6 @@
   "As part of this page's load we make a request to a mockup endpoint.": "Como parte de la carga de esta página hacemos una solicitud un endpoint de prueba.",
   "In order to make sure the response data fulfill the expectations we have about its structure and typing we use a response validator.": "Para asegurarnos de que los datos de la respuesta cumplen con la esttructura que esperamos que tengan usamos un validador de respuesta",
   "This is how a request looks like:": "Así es como se ve una solicitud:",
-  "<strong>User</strong> entity:": "Entidad <strong>User</strong>:"
+  "<strong>User</strong> DTO:": "DTO <strong>User</strong>:",
+  "If you open the console you should see something like this:": "Si abres la consola deberías ver algo así:"
 }
