feat: catalog inputs

--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -44,5 +44,13 @@
   "In order to make sure the response data fulfill the expectations we have about its structure and typing we use a response validator.": "Para asegurarnos de que los datos de la respuesta cumplen con la esttructura que esperamos que tengan usamos un validador de respuesta",
   "This is how a request looks like:": "Así es como se ve una solicitud:",
   "<strong>User</strong> DTO:": "DTO <strong>User</strong>:",
-  "If you open the console you should see something like this:": "Si abres la consola deberías ver algo así:"
+  "If you open the console you should see something like this:": "Si abres la consola deberías ver algo así:",
+  "Type something": "Escribe algo",
+  "Type a number": "Escribe un número",
+  "Inputs": "Campos de Ingreso",
+  "All inputs will return the same value type as they receive.": "Todos los campos retornarán el mismo tipo de valor que reciben.",
+  "The <code><TextInput /></code> component will take any <code>string</code> value.": "El componente <code><TextInput /></code> acepta cualquier valor de tipo <code>string</code>.",
+  "The <code><NumberInput /></code> component will take any <code>number</code> or <code>''</code> as its value.": "El componente <code><NumberInput /></code> acepta cualquier valor de tipo <code>number</code> ó <code>\"\"</code> como su valor.",
+  "The <code><Select /></code> component will take any type as an option's type, and return the same value type.": "El componente <code><Select /></code> aceptará cualquier tipo de valor en sus opciones, y retornará el mismo typo de valor.",
+  "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes.": "La prop <code>invert</code> es útil cuando el fondo es coloreado o no responde a los cambios del modo del tema."
 }
