--- a/template/src/utilities/i18n/en.json
+++ b/template/src/utilities/i18n/en.json
@@ -46,5 +46,13 @@
   "In order to make sure the response data fulfill the expectations we have about its structure and typing we use a response validator.": "In order to make sure the response data fulfill the expectations we have about its structure and typing we use a response validator.",
   "This is how a request looks like:": "This is how a request looks like:",
   "<strong>User</strong> DTO:": "<strong>User</strong> DTO:",
-  "If you open the console you should see something like this:": "If you open the console you should see something like this:"
+  "If you open the console you should see something like this:": "If you open the console you should see something like this:",
+  "Type something": "Type something",
+  "Type a number": "Type a number",
+  "Inputs": "Inputs",
+  "All inputs will return the same value type as they receive.": "All inputs will return the same value type as they receive.",
+  "The <code><TextInput /></code> component will take any <code>string</code> value.": "The <code><TextInput /></code> component will take any <code>string</code> value.",
+  "The <code><NumberInput /></code> component will take any <code>number</code> or <code>''</code> as its value.": "The <code><NumberInput /></code> component will take any <code>number</code> or <code>\"\"</code> as its value.",
+  "The <code><Select /></code> component will take any type as an option's type, and return the same value type.": "The <code><Select /></code> component will take any type as an option's type, and return the same value type.",
+  "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes.": "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes."
 }
