--- a/template/src/utilities/i18n/en.json
+++ b/template/src/utilities/i18n/en.json
@@ -54,5 +54,8 @@
   "The <code><TextInput /></code> component will take any <code>string</code> value.": "The <code><TextInput /></code> component will take any <code>string</code> value.",
   "The <code><NumberInput /></code> component will take any <code>number</code> or <code>''</code> as its value.": "The <code><NumberInput /></code> component will take any <code>number</code> or <code>\"\"</code> as its value.",
   "The <code><Select /></code> component will take any type as an option's type, and return the same value type.": "The <code><Select /></code> component will take any type as an option's type, and return the same value type.",
-  "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes.": "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes."
+  "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes.": "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes.",
+  "No date selected": "No date selected",
+  "The <code><DateTimeInput /></code>, <code><DateInput /></code> and <code><TimeInput /></code> components will take any <code>Date</code> as their value.": "The <code><DateTimeInput /></code>, <code><DateInput /></code> and <code><TimeInput /></code> components will take any <code>Date</code> as their value.",
+  "The date display above is localized and will react to the locale being updated on the app.": "The date display above is localized and will react to the locale being updated on the app."
 }
