fix: fixed mr changes

--- a/template/src/utilities/i18n/en.json
+++ b/template/src/utilities/i18n/en.json
@@ -50,8 +50,8 @@
   "<strong>User</strong> DTO:": "<strong>User</strong> DTO:",
   "If you open the console you should see something like this:": "If you open the console you should see something like this:",
   "Harmony": "Harmony",
-  "Account connected:":"Account connected:",
-  "Chain id":"Chain id",
+  "Account connected: {account}":"Account connected: {account}",
+  "Chain id: {chainId}":"Chain id: {chainId}",
   "None":"None",
   "Change network":"Change network",
   "Blockchain":"Blockchain",
