--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -47,8 +47,8 @@
   "<strong>User</strong> DTO:": "DTO <strong>User</strong>:",
   "If you open the console you should see something like this:": "Si abres la consola deberías ver algo así:",
   "Harmony": "Harmony",
-  "Account connected":"Cuenta conectada",
-  "Chain id":"Identificador de cadena",
+  "Account connected: {account}":"Cuenta conectada: {account}",
+  "Chain id: {chainId}":"Identificador de cadena: {chainId}",
   "None":"None",
   "Change network":"Cambiar de red",
   "Blockchain":"Blockchain",
