--- a/template/src/utilities/i18n/en.json
+++ b/template/src/utilities/i18n/en.json
@@ -25,7 +25,7 @@
   "Login": "Login",
   "Logout": "Logout",
   "Connect wallet": "Connect wallet",
-  "Disconnect":"Disconnect",
+  "Disconnect": "Disconnect",
   "Welcome {userName}": "Welcome {userName}",
   "Any email will do": "Any email will do",
   "Any text with at least 8 characters will do": "Any text with at least 8 characters will do",
@@ -51,15 +51,15 @@
   "If you open the console you should see something like this:": "If you open the console you should see something like this:",
   "Harmony": "Harmony",
   "Arbitrum One": "Arbitrum One",
-  "Account connected: {account}":"Account connected: {account}",
-  "Chain id: {chainId}":"Chain id: {chainId}",
-  "None":"None",
-  "Change network":"Change network",
-  "Blockchain":"Blockchain",
-  "Metamask":"Metamask",
-  "Wallet Connect":"Wallet Connect",
-  "Coinbase Wallet":"Coinbase Wallet",
-  "Wrong Network":"Wrong Network",
+  "Account connected: {account}": "Account connected: {account}",
+  "Chain id: {chainId}": "Chain id: {chainId}",
+  "None": "None",
+  "Change network": "Change network",
+  "Blockchain": "Blockchain",
+  "Metamask": "Metamask",
+  "Wallet Connect": "Wallet Connect",
+  "Coinbase Wallet": "Coinbase Wallet",
+  "Wrong Network": "Wrong Network",
   "Type something": "Type something",
   "Type a number": "Type a number",
   "Inputs": "Inputs",
@@ -70,5 +70,6 @@
   "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes.": "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes.",
   "No date selected": "No date selected",
   "The <code><DateTimeInput /></code>, <code><DateInput /></code> and <code><TimeInput /></code> components will take any <code>Date</code> as their value.": "The <code><DateTimeInput /></code>, <code><DateInput /></code> and <code><TimeInput /></code> components will take any <code>Date</code> as their value.",
-  "The date display above is localized and will react to the locale being updated on the app.": "The date display above is localized and will react to the locale being updated on the app."
+  "The date display above is localized and will react to the locale being updated on the app.": "The date display above is localized and will react to the locale being updated on the app.",
+  "Connect Wallet": "Connect Wallet"
 }
