--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -20,9 +20,12 @@
   "Email Address": "Correo Electrónico",
   "Password": "Contraseña",
   "Required field": "Campo requerido",
+  "Must be a valid email": "Debe ser un correo electrónico válido",
+  "Must be at least 8 charactes long": "Debe tener un largo minimo de 8 caracteres",
   "Login": "Iniciar sesión",
+  "Logout": "Cerrar sesión",
   "Connect wallet": "Conectar billetera",
-  "Disconnect":"Desconectar",
+  "Disconnect": "Desconectar",
   "Welcome {userName}": "Bienvenida/o {userName}",
   "Any email will do": "Cualquier coreo sirve",
   "Any text with at least 8 characters will do": "Cualquier texto con por lo menos 8 caracteres está bien",
@@ -48,15 +51,15 @@
   "If you open the console you should see something like this:": "Si abres la consola deberías ver algo así:",
   "Harmony": "Harmony",
   "Arbitrum One": "Arbitrum One",
-  "Account connected: {account}":"Cuenta conectada: {account}",
-  "Chain id: {chainId}":"Identificador de cadena: {chainId}",
-  "None":"None",
-  "Change network":"Cambiar de red",
-  "Blockchain":"Blockchain",
-  "Metamask":"Metamask",
-  "Wallet Connect":"Wallet Connect",
-  "Coinbase Wallet":"Coinbase Wallet",
-  "Wrong Network":"Red no valida",
+  "Account connected: {account}": "Cuenta conectada: {account}",
+  "Chain id: {chainId}": "Identificador de cadena: {chainId}",
+  "None": "None",
+  "Change network": "Cambiar de red",
+  "Blockchain": "Blockchain",
+  "Metamask": "Metamask",
+  "Wallet Connect": "Wallet Connect",
+  "Coinbase Wallet": "Coinbase Wallet",
+  "Wrong Network": "Red no valida",
   "Type something": "Escribe algo",
   "Type a number": "Escribe un número",
   "Inputs": "Campos de Ingreso",
@@ -67,5 +70,6 @@
   "The prop <code>invert</code> is usefull when the background is collored and doesn't react with the theme mode changes.": "La prop <code>invert</code> es útil cuando el fondo es coloreado o no responde a los cambios del modo del tema.",
   "No date selected": "No se ha seleccionado una fecha",
   "The <code><DateTimeInput /></code>, <code><DateInput /></code> and <code><TimeInput /></code> components will take any <code>Date</code> as their value.": "Los componentes <code><DateTimeInput /></code>, <code><DateInput /></code> y <code><TimeInput /></code> aceptan cualquier valor de tipo <code>Date</code>.",
-  "The date display above is localized and will react to the locale being updated on the app.": "La fecha que se puede ver arriba es localizada y responde a los cambios de locale de la aplicación."
+  "The date display above is localized and will react to the locale being updated on the app.": "La fecha que se puede ver arriba es localizada y responde a los cambios de locale de la aplicación.",
+  "Connect Wallet": "Connect Wallet"
 }
