fix: enable null for selects

--- a/template/src/utilities/i18n/en.json
+++ b/template/src/utilities/i18n/en.json
@@ -78,5 +78,6 @@
   "The <code><Checkbox /></code> component allows for the selection of a simple boolean value.": "The <code><Checkbox /></code> component allows for the selection of a simple boolean value.",
   "Custom Example": "Custom Example",
   "This field is required": "This field is required",
-  "Submit": "Submit"
+  "Submit": "Submit",
+  "Pick an option": "Pick an option"
 }
