--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -76,5 +76,6 @@
   "Connect Wallet": "Conectar Billetera",
   "The <code><RadioGroup /></code> component will take any type as an option's type, and return the same value type.": "El componente <code><RadioGroup /></code> aceptará cualquier tipo de valor en sus opciones, y retornará el mismo typo de valor.",
   "The <code><Checkbox /></code> component allows for the selection of a simple boolean value.": "El componente <code><Checkbox /></code> permite la selección de un simple valor booleano.",
-  "Custom Example": "Ejemplo personalizado"
+  "Custom Example": "Ejemplo personalizado",
+  "Pick an option": "Selecciona una opción"
 }
