feat(radioButton): use custom color

--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -77,5 +77,7 @@
   "The <code><RadioGroup /></code> component will take any type as an option's type, and return the same value type.": "El componente <code><RadioGroup /></code> aceptará cualquier tipo de valor en sus opciones, y retornará el mismo typo de valor.",
   "The <code><Checkbox /></code> component allows for the selection of a simple boolean value.": "El componente <code><Checkbox /></code> permite la selección de un simple valor booleano.",
   "Custom Example": "Ejemplo personalizado",
+  "This field is required": "Este campo es requerido",
+  "Submit": "Enviar",
   "Pick an option": "Selecciona una opción"
 }
