feat(examples): add state page

--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -79,5 +79,7 @@
   "Custom Example": "Ejemplo personalizado",
   "This field is required": "Este campo es requerido",
   "Submit": "Enviar",
-  "Pick an option": "Selecciona una opción"
+  "Pick an option": "Selecciona una opción",
+  "Intro": "Introducción",
+  "Global": "Global"
 }
