--- a/template/src/utilities/i18n/en.json
+++ b/template/src/utilities/i18n/en.json
@@ -79,5 +79,23 @@
   "Custom Example": "Custom Example",
   "This field is required": "This field is required",
   "Submit": "Submit",
-  "Pick an option": "Pick an option"
+  "Pick an option": "Pick an option",
+  "Intro": "Intro",
+  "What is State?": "What is State?",
+  "We indentified 3 different types or levels of state.": "We indentified 3 different types or levels of state.",
+  "Global State": "Global State",
+  "Accessible throughout the whole app.": "Accessible throughout the whole app.",
+  "Reserved for data that we want to fetch as little as possible. e.g.: authenticated user's data, app theme, etc.": "Reserved for data that we want to fetch as little as possible. e.g.: authenticated user's data, app theme, etc.",
+  "Handled by default with <a>Redux,https://redux.js.org</a> and <a>Redux-Toolkit,https://redux-toolkit.js.org</a>.": "Handled by default with <a>Redux,https://redux.js.org</a> and <a>Redux-Toolkit,https://redux-toolkit.js.org</a>.",
+  "Scoped State": "Scoped State",
+  "Available only to a selected branch of the app's tree and positioned on the upper common node to all served child nodes.": "Available only to a selected branch of the app's tree and positioned on the upper common node to all served child nodes.",
+  "Reserved for data that has to be accessed on different nesting levels, but is not needed app-whide.": "Reserved for data that has to be accessed on different nesting levels, but is not needed app-whide.",
+  "This pattern should be avoided for data that updates too frequently.": "This pattern should be avoided for data that updates too frequently.",
+  "Handled with <a>React Context API,https://reactjs.org/docs/context.html</a>.": "Handled with <a>React Context API,https://reactjs.org/docs/context.html</a>.",
+  "Component State": "Component State",
+  "Located on the component level.": "Located on the component level.",
+  "Handled with the <code>useState</code> hook.": "Handled with the <code>useState</code> hook.",
+  "The <i>state</i> is the business-related data.": "The <i>state</i> is the business-related data.",
+  "No UI related data (the app theme is an exception here).": "No UI related data (the app theme is an exception here).",
+  "No error handling.": "No error handling."
 }
