--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -81,5 +81,25 @@
   "Submit": "Enviar",
   "Pick an option": "Selecciona una opción",
   "Intro": "Introducción",
-  "Global": "Global"
+  "What is State?": "¿Qué es estado?",
+  "We indentified 3 different types or levels of state.": "Hemos identificado 3 tipos o niveles de estado.",
+  "Global State": "Estado Global",
+  "Accessible throughout the whole app.": "Accessible en toda la app.",
+  "Reserved for data that we want to fetch as little as possible. e.g.: authenticated user's data, app theme, etc.": "Reserved for data that we want to fetch as little as possible. e.g.: authenticated user's data, app theme, etc.",
+  "Handled by default with <a>Redux,https://redux.js.org</a> and <a>Redux-Toolkit,https://redux-toolkit.js.org</a>.": "Handled by default with <a>Redux,https://redux.js.org</a> and <a>Redux-Toolkit,https://redux-toolkit.js.org</a>.",
+  "Scoped State": "Scoped State",
+  "Available only to a selected branch of the app's tree and positioned on the upper common node to all served child nodes.": "Available only to a selected branch of the app's tree and positioned on the upper common node to all served child nodes.",
+  "This pattern should be avoided for data that updates too frequently.": "Este patrón se debe evitar para datos que actualicen con demasiada frecuencia.",
+  "Handled with <a>React Context API,https://reactjs.org/docs/context.html</a>.": "Manejado con <a>React Context API,https://es.reactjs.org/docs/context.html</a>.",
+  "Component State": "Estado de componente",
+  "Located on the component level.": "Ubicado a nivel del componente.",
+  "Handled with the <code>useState</code> hook.": "Manejado con el hook <code>useState</code>.",
+  "The <i>state</i> is the business-related data.": "<i>Estado</i> son los datos relacionados al negocio.",
+  "No error handling.": "No manejo de errores.",
+  "The Humble Counter": "El Humilde Contador",
+  "Submiting the following form will update the counter value globally and the value will be reflected here: ": "Enviando el siguiente formulario actualizará el valor del contador global y el valor se verá reflejado aquí: ",
+  "No UI related data (the app theme is an exception here, for now).": "No datos relacionados a la IU (el tema de la aplicación es una excepción aquí, por ahora).",
+  "No fetching logic.": "No loǵica de solicitudes.",
+  "Reserved for data that has to be accessed on different nesting levels, but is not needed app-wide.": "Reservado para datos que queremos acceder a distintos niveles de anidado, pero que no estarán disponibles para toda la app.",
+  "Global Counter": "Contador Global"
 }
