--- a/template/src/utilities/i18n/es.json
+++ b/template/src/utilities/i18n/es.json
@@ -91,7 +91,7 @@
   "Available only to a selected branch of the app's tree and positioned on the upper common node to all served child nodes.": "Available only to a selected branch of the app's tree and positioned on the upper common node to all served child nodes.",
   "This pattern should be avoided for data that updates too frequently.": "Este patrón se debe evitar para datos que actualicen con demasiada frecuencia.",
   "Handled with <a>React Context API,https://reactjs.org/docs/context.html</a>.": "Manejado con <a>React Context API,https://es.reactjs.org/docs/context.html</a>.",
-  "Component State": "Estado de componente",
+  "Component State": "Estado de Componente",
   "Located on the component level.": "Ubicado a nivel del componente.",
   "Handled with the <code>useState</code> hook.": "Manejado con el hook <code>useState</code>.",
   "The <i>state</i> is the business-related data.": "<i>Estado</i> son los datos relacionados al negocio.",
@@ -110,5 +110,8 @@
   "Nesting Contexts": "Anidando Contextos",
   "Using a Context means that the Context API will do a lookup up the component's tree and use the first one available.": "Usar un Contexto significa que Context API va a buscar hacia arriba en el árbol de componentes hasta encontrar el primer Contexto disponible.",
   "This means that we can nest providers and by doing that change the Context its children will use, even if up the component's tree we have already placed another Provider.": "Esto significa que anidando Contextos podemos cambiar el Contexto que los hijos van a usar, incluso si ya esxite otro contexto más arriba en el árbol de componentes.",
-  "In the following example you will notice that, even though we use the same consumer component, each one will have different values, and the changes triggered on any given level will only affect such level.": "En el siguiente ejemplo se puede observar que, a pesar de que se usa siempre el mismo componente como consumidor, cada nivel tiene diferentes valores, y que además los cambios realizados en un nivel sólo afecta ese nivel."
+  "In the following example you will notice that, even though we use the same consumer component, each one will have different values, and the changes triggered on any given level will only affect such level.": "En el siguiente ejemplo se puede observar que, a pesar de que se usa siempre el mismo componente como consumidor, cada nivel tiene diferentes valores, y que además los cambios realizados en un nivel sólo afecta ese nivel.",
+  "Local state can't be reached outside of the component": "El estado local no puede ser accedido desde fuera del componente",
+  "Type anything in the input below": "Escribe en el campo debajo",
+  "Text for header above": "Texto del encabezado arriba"
 }
